--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -336,9 +336,6 @@
     <ClCompile Include="Threading\ttapi.cpp">
       <Filter>Threading</Filter>
     </ClCompile>
-    <ClCompile Include="Threading\xrSyncronize.cpp">
-      <Filter>Threading</Filter>
-    </ClCompile>
     <ClCompile Include="Math\PLC_SSE.cpp">
       <Filter>Math</Filter>
     </ClCompile>
@@ -353,6 +350,12 @@
     </ClCompile>
     <ClCompile Include="Text\MbHelpers.cpp">
       <Filter>Text</Filter>
+    </ClCompile>
+    <ClCompile Include="Threading\Lock.cpp">
+      <Filter>Threading</Filter>
+    </ClCompile>
+    <ClCompile Include="Threading\Event.cpp">
+      <Filter>Threading</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -701,9 +704,6 @@
     <ClInclude Include="Threading\ttapi.h">
       <Filter>Threading</Filter>
     </ClInclude>
-    <ClInclude Include="Threading\xrSyncronize.h">
-      <Filter>Threading</Filter>
-    </ClInclude>
     <ClInclude Include="Math\PLC_SSE.hpp">
       <Filter>Math</Filter>
     </ClInclude>
@@ -724,6 +724,12 @@
     </ClInclude>
     <ClInclude Include="Text\MbHelpers.h">
       <Filter>Text</Filter>
+    </ClInclude>
+    <ClInclude Include="Threading\Lock.hpp">
+      <Filter>Threading</Filter>
+    </ClInclude>
+    <ClInclude Include="Threading\Event.hpp">
+      <Filter>Threading</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
