Fix xrCore/Crypto include paths case.

--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -439,10 +439,10 @@
     <ClInclude Include="Containers\AssociativeVector.hpp" />
     <ClInclude Include="Containers\AssociativeVectorComparer.hpp" />
     <ClInclude Include="cpuid.h" />
-    <ClInclude Include="crypto\crypto.h" />
-    <ClInclude Include="crypto\crypto_api_def.h" />
-    <ClInclude Include="crypto\xr_dsa.h" />
-    <ClInclude Include="crypto\xr_sha.h" />
+    <ClInclude Include="Crypto\crypto.h" />
+    <ClInclude Include="Crypto\crypto_api_def.h" />
+    <ClInclude Include="Crypto\xr_dsa.h" />
+    <ClInclude Include="Crypto\xr_sha.h" />
     <ClInclude Include="Debug\dxerr.h" />
     <ClInclude Include="Debug\DXGetErrorDescription.inl">
       <FileType>CppHeader</FileType>
