--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -292,11 +292,11 @@
     <ClCompile Include="clsid.cpp" />
     <ClCompile Include="cpuid.cpp" />
     <ClCompile Include="crc32.cpp" />
-    <ClCompile Include="crypto\crypto.cpp" />
-    <ClCompile Include="crypto\xr_dsa.cpp" />
-    <ClCompile Include="crypto\xr_dsa_signer.cpp" />
-    <ClCompile Include="crypto\xr_dsa_verifyer.cpp" />
-    <ClCompile Include="crypto\xr_sha.cpp" />
+    <ClCompile Include="Crypto\crypto.cpp" />
+    <ClCompile Include="Crypto\xr_dsa.cpp" />
+    <ClCompile Include="Crypto\xr_dsa_signer.cpp" />
+    <ClCompile Include="Crypto\xr_dsa_verifyer.cpp" />
+    <ClCompile Include="Crypto\xr_sha.cpp" />
     <ClCompile Include="Debug\dxerr.cpp" />
     <ClCompile Include="doug_lea_allocator.cpp" />
     <ClCompile Include="dump_string.cpp" />
@@ -444,8 +444,8 @@
     <ClInclude Include="Crypto\crypto.h" />
     <ClInclude Include="Crypto\crypto_api_def.h" />
     <ClInclude Include="Crypto\xr_dsa.h" />
-    <ClInclude Include="crypto\xr_dsa_signer.h" />
-    <ClInclude Include="crypto\xr_dsa_verifyer.h" />
+    <ClInclude Include="Crypto\xr_dsa_signer.h" />
+    <ClInclude Include="Crypto\xr_dsa_verifyer.h" />
     <ClInclude Include="Crypto\xr_sha.h" />
     <ClInclude Include="Debug\dxerr.h" />
     <ClInclude Include="Debug\DXGetErrorDescription.inl">
