--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -381,10 +381,10 @@
     <ClCompile Include="Crypto\xr_sha.cpp">
       <Filter>Crypto</Filter>
     </ClCompile>
-    <ClCompile Include="crypto\xr_dsa_signer.cpp">
+    <ClCompile Include="Crypto\xr_dsa_signer.cpp">
       <Filter>Crypto</Filter>
     </ClCompile>
-    <ClCompile Include="crypto\xr_dsa_verifyer.cpp">
+    <ClCompile Include="Crypto\xr_dsa_verifyer.cpp">
       <Filter>Crypto</Filter>
     </ClCompile>
   </ItemGroup>
@@ -806,13 +806,13 @@
     <ClInclude Include="Crypto\xr_dsa.h">
       <Filter>Crypto</Filter>
     </ClInclude>
-    <ClInclude Include="crypto\xr_sha.h">
+    <ClInclude Include="Crypto\xr_sha.h">
       <Filter>crypto</Filter>
     </ClInclude>
-    <ClInclude Include="crypto\xr_dsa_signer.h">
+    <ClInclude Include="Crypto\xr_dsa_signer.h">
       <Filter>Crypto</Filter>
     </ClInclude>
-    <ClInclude Include="crypto\xr_dsa_verifyer.h">
+    <ClInclude Include="Crypto\xr_dsa_verifyer.h">
       <Filter>Crypto</Filter>
     </ClInclude>
   </ItemGroup>
